@@ -5,16 +5,17 @@ import java.util.LinkedHashMap;
 import java.util.Map;
 
 import com.google.common.base.Predicates;
+import com.google.common.collect.ImmutableMap;
 
 import hupiat.intranet.server.core.rules.generics.SizeRuled;
 
 public record RuleStubBuilder<T extends IRuleStubProxy>(Class<T> clazz) implements Serializable {
 
-	private static final Map<String, ? extends IRuleStubProxy> constraints = Map.of(IRuleStubProxy.TEXT,
-			new SizeRuled(SizeRuled.MIN_VALUE), IRuleStubProxy.TEXT_SHORT,
+	private static final ImmutableMap<String, ? extends IRuleStubProxy> constraints = ImmutableMap.of(
+			IRuleStubProxy.TEXT, new SizeRuled(SizeRuled.MIN_VALUE), IRuleStubProxy.TEXT_SHORT,
 			new SizeRuled(SizeRuled.MIN_VALUE, SizeRuled.MAX_VALUE_COMMON),
 			IRuleStubProxy.mutatedProxy(IRuleStubProxy.TEXT_SHORT),
-			new SizeRuled(SizeRuled.MIN_VALUE_ALT, SizeRuled.MAX_VALUE));
+			new SizeRuled(SizeRuled.MIN_VALUE_ALT, SizeRuled.MAX_VALUE_COMMON));
 
 	public Map<String, T> build() {
 		var res = new LinkedHashMap<String, T>();
